name:                wreq
version:             0.0.0.0
synopsis:            An easy-to-use HTTP client library.
description:
  .
  wreq is a HTTP client library that is designed for ease of use.
homepage:            https://github.com/bos/wreq
bug-reports:         https://github.com/bos/wreq/issues
license:             BSD3
license-file:        LICENSE
-- author:
maintainer:          bos@serpentine.com
-- copyright:
category:            Web
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:
  examples/*.cabal
  examples/*.hs

-- disable doctests with -f-test-doctests
flag test-doctests
  default: True
  manual: True

library
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  default-language: Haskell98

  exposed-modules:
    Network.Wreq
    Network.Wreq.Lens
    Network.Wreq.Session
    Network.Wreq.Types
  other-modules:
    Network.Wreq.Internal
    Network.Wreq.Internal.Lens
    Network.Wreq.Internal.Link
    Network.Wreq.Internal.Types
    Network.Wreq.Lens.TH
    Network.Wreq.Lens.Machinery
    Paths_wreq
  build-depends:
    aeson >= 0.7.0.3,
    attoparsec,
    base >= 4.5 && < 5,
    bytestring >= 0.9,
    exceptions >= 0.5,
    http-client >= 0.3.0.2,
    http-client-tls >= 0.2,
    http-types >= 0.8,
    lens >= 4.1,
    mime-types,
    template-haskell,
    text,
    time

executable httpbin
  hs-source-dirs: httpbin
  main-is:        HttpBin.hs
  ghc-options:    -Wall -fwarn-tabs -funbox-strict-fields -threaded
  default-language: Haskell98

  build-depends:
    aeson >= 0.7,
    aeson-pretty >= 0.7.1,
    base >= 4.5 && < 5,
    base64-bytestring,
    bytestring,
    case-insensitive,
    containers,
    dlist,
    snap-core,
    snap-server >= 0.9.4.2,
    text

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Tests.hs
  ghc-options:    -Wall -fwarn-tabs -funbox-strict-fields -threaded
  default-language: Haskell98

  build-depends:
    HUnit,
    aeson,
    base >= 4.5 && < 5,
    bytestring,
    http-client,
    http-types,
    lens >= 4.1,
    temporary,
    test-framework,
    test-framework-hunit,
    text,
    wreq

test-suite doctest
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        DocTests.hs
  ghc-options:    -Wall -fwarn-tabs -threaded
  default-language: Haskell98

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base >= 4.5 && < 5,
      directory,
      doctest,
      filepath

source-repository head
  type:     git
  location: https://github.com/bos/wreq

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/wreq
