name:                wreq
version:             0.2.0.0
synopsis:            An easy-to-use HTTP client library.
description:
  .
  A web client library that is designed for ease of use.
  .
  Tutorial: <http://www.serpentine.com/wreq/tutorial.html>
  .
  Features include:
  .
  * Simple but powerful `lens`-based API
  .
  * A solid test suite, and built on reliable libraries like
    http-client and lens
  .
  * Session handling includes connection keep-alive and pooling, and
    cookie persistence
  .
  * Automatic response body decompression
  .
  * Powerful multipart form and file upload handling
  .
  * Support for JSON requests and responses, including navigation of
    schema-less responses
  .
  * Basic and OAuth2 bearer authentication
  .
  * Early TLS support via the tls package
homepage:            http://www.serpentine.com/wreq
bug-reports:         https://github.com/bos/wreq/issues
license:             BSD3
license-file:        LICENSE.md
author:              Bryan O'Sullivan <bos@serpentine.com>
maintainer:          bos@serpentine.com
copyright:           2014 Bryan O'Sullivan
category:            Web
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:
  README.md
  TODO.md
  changelog
  examples/*.cabal
  examples/*.hs
  www/*.css
  www/*.md
  www/Makefile

-- disable doctests with -f-doctest
flag doctest
  default: True
  manual: True

-- enable httpbin with -fhttpbin
flag httpbin
  default: False
  manual: True

library
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  default-language: Haskell98

  exposed-modules:
    Network.Wreq
    Network.Wreq.Lens
    Network.Wreq.Session
    Network.Wreq.Types
  other-modules:
    Network.Wreq.Internal
    Network.Wreq.Internal.Lens
    Network.Wreq.Internal.Link
    Network.Wreq.Internal.Types
    Network.Wreq.Lens.Machinery
    Network.Wreq.Lens.TH
    Paths_wreq
  build-depends:
    aeson >= 0.7.0.3,
    attoparsec >= 0.11.1.0,
    base >= 4.5 && < 5,
    bytestring >= 0.9,
    exceptions >= 0.5,
    http-client >= 0.3.1.1,
    http-client-tls >= 0.2,
    http-types >= 0.8,
    lens >= 4.4,
    lens-aeson,
    mime-types,
    template-haskell,
    text,
    time

-- A convenient server for testing locally, or if httpbin.org is down.
executable httpbin
  hs-source-dirs: httpbin
  main-is:        HttpBin.hs
  ghc-options:    -Wall -fwarn-tabs -threaded
  default-language: Haskell98

  if !flag(httpbin)
    buildable: False
  else
    build-depends:
      aeson >= 0.7,
      aeson-pretty >= 0.7.1,
      base >= 4.5 && < 5,
      base64-bytestring,
      bytestring,
      case-insensitive,
      containers,
      snap-core,
      snap-server >= 0.9.4.2,
      text

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Tests.hs
  ghc-options:    -Wall -fwarn-tabs -funbox-strict-fields -threaded
  default-language: Haskell98

  build-depends:
    HUnit,
    aeson,
    base >= 4.5 && < 5,
    bytestring,
    http-client,
    http-types,
    lens >= 4.4,
    lens-aeson,
    temporary,
    test-framework,
    test-framework-hunit,
    text,
    wreq

test-suite doctest
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        DocTests.hs
  ghc-options:    -Wall -fwarn-tabs -threaded
  default-language: Haskell98

  if !flag(doctest)
    buildable: False
  else
    build-depends:
      base >= 4.5 && < 5,
      directory,
      doctest,
      filepath

source-repository head
  type:     git
  location: https://github.com/bos/wreq

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/wreq
